# MoReVQA

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  videoqa_demo.py
Datasets/: README.md  __init__.py
configs/: LLM_config.yaml
engine/: __init__.py  config.py  memory.py  schemas.py  utils.py  video.py
engine/models/: __init__.py  adapters.py  base.py  registry.py
examples/: run_morevqa.py
framework/: __init__.py  morevqa.py
framework/stages/: __init__.py  event_parser.py  grounding.py  prediction.py  reasoning.py
morevqa/: __init__.py  cli.py
prompts/: __init__.py  prompt_engineering.py
tests/: test_open_model_adapters.py  test_smoke.py
tools/: __init__.py  event.py  grounding.py  reasoning.py
