[project]
name = "morevqa-reproduction"
version = "0.1.0"
description = "Training-free MoReVQA-style modular reasoning for video question answering."
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "openai>=1.30",
  "httpx>=0.27",
  "opencv-python>=4.8",
  "torch>=2.1",
  "torchvision>=0.16",
  "transformers>=4.51",
  "accelerate>=0.27",
  "sentencepiece>=0.2",
  "ftfy>=6.1",
  "regex>=2023.0",
  "tqdm>=4.66",
  "clip @ git+https://github.com/openai/CLIP.git",
]

[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
morevqa = "morevqa.cli:main"

[tool.setuptools.packages.find]
include = ["morevqa*", "engine*", "framework*", "prompts*", "tools*", "Datasets*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
